home page styles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,13 +13,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* .gradient-bg-home {
+.gradient-bg-nav {
+    background-color:#0f0e13;
+    background-image: 
+    radial-gradient(at 0% 0%, hsla(253, 16%, 7%, 1) 0, transparent 100%),
+    radial-gradient(at 50% 0%, hsla(225, 39%, 30%, 1) 0, transparent 100%),
+    radial-gradient(at 100% 0%, hsla(339, 49%, 30%, 1) 0, transparent 100%);
+}
+
+.gradient-bg-home {
   background-color:#0f0e13;
   background-image: 
     radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
     radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
-} */
+}
 
 /* .gradient-bg-services {
   background-color:#0f0e13;
@@ -40,19 +48,18 @@ body {
   background-image: 
     radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
     radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
-}
+} */
 
-.blue-glassmorphism {
+.blue-glass {
   background: rgb(39, 51, 89, 0.4);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(0, 0, 0, 0.3);
-} */
+}
 
-/* white glassmorphism */
-/* .white-glassmorphism {
+.white-glass {
   background: rgba(255, 255, 255, 0.05);
   border-radius: 16px;
   backdrop-filter: blur(5px);
@@ -61,23 +68,17 @@ body {
 }
 
 .eth-card {
-  background-color:#a099ff;
+  background-color:#999cff;
   background-image: 
-    radial-gradient(at 83% 67%, rgb(152, 231, 156) 0, transparent 58%), 
-    radial-gradient(at 67% 20%, hsla(357,94%,71%,1) 0, transparent 59%), 
-    radial-gradient(at 88% 35%, hsla(222,81%,65%,1) 0, transparent 50%), 
-    radial-gradient(at 31% 91%, hsla(9,61%,61%,1) 0, transparent 52%), 
-    radial-gradient(at 27% 71%, hsla(336,91%,65%,1) 0, transparent 49%), 
-    radial-gradient(at 74% 89%, hsla(30,98%,65%,1) 0, transparent 51%), 
-    radial-gradient(at 53% 75%, hsla(174,94%,68%,1) 0, transparent 45%);
+  radial-gradient(at 1% 44%, hsla(260, 94%, 79%, 1) 0px, transparent 50%),
+  radial-gradient(at 9% 44%, hsla(233, 85%, 73%, 1) 0px, transparent 50%),
+  radial-gradient(at 1003% 56%, hsla(157, 82%, 78%, 1) 0px, transparent 50%),
+  radial-gradient(at 120% 18%, hsla(39, 92%, 74%, 1) 0px, transparent 50%),
+  radial-gradient(at 0% 14%, hsla(68, 66%, 67%, 1) 0px, transparent 50%),
+  radial-gradient(at 25% 91%, hsla(253, 93%, 62%, 1) 0px, transparent 50%),
+  radial-gradient(at 45% 81%, hsla(190, 91%, 63%, 1) 0px, transparent 50%);
 }
 
-.text-gradient {
-  background-color: #fff;
-  background-image: radial-gradient(at 4% 36%, hsla(0,0%,100%,1) 0, transparent 53%), radial-gradient(at 100% 60%, rgb(0, 0, 0) 0, transparent 50%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-} */
 
 
 @tailwind base;
