--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ body {
     radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
 }
 
-/* .gradient-bg-services {
+.gradient-bg-approvers {
   background-color:#0f0e13;
   background-image: 
     radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
@@ -48,7 +48,7 @@ body {
   background-image: 
     radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
     radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
-} */
+}
 
 .blue-glass {
   background: rgb(39, 51, 89, 0.4);
